--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vedant's Digital Buissness card</title>
     <link rel="stylesheet" href="buissnesscard.css">
 </head>
 <body>
@@ -16,4 +16,5 @@
         </div>
     </div>
 </body>
+
 </html>
